<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:theme="@style/ThemeOverlay.DiceOfFate.FullscreenContainer"
    tools:context=".FullscreenActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/prevMonsterButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/prev_button"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher_foreground" />

            <Button
                android:id="@+id/nextMonsterButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/next_button"
                android:textSize="20sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/monsterNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="PLACEHOLDER MONSTER"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/monsterHealthText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hp_stat"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="0" />

        <TextView
            android:id="@+id/characterNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="PLACEHOLDER CHARACTER"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/characterHealthText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hp_stat"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/attackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attack_button"
            android:textSize="20sp" />

        <Button
            android:id="@+id/abilityButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ability_button"
            android:textSize="20sp" />

        <Button
            android:id="@+id/itemCombatButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_button"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fullscreen_content_controls"
        style="@style/Widget.Theme.DiceOfFate.ButtonBar.Fullscreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:orientation="horizontal"
        tools:ignore="UselessParent" >

    </LinearLayout>

</FrameLayout>