<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:theme="@style/ThemeOverlay.DiceOfFate.FullscreenContainer"
    tools:context=".FullscreenActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="@style/Widget.Theme.DiceOfFate.ButtonBar.Fullscreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="horizontal"
            tools:ignore="UselessParent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/title"
                android:textColor="#FFFFFF"
                android:textSize="48sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/subtitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/subtitle"
                android:textColor="#FFFFFF"
                android:textSize="34sp"
                android:textStyle="italic" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="100dp" />

            <Button
                android:id="@+id/newGameButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_game_button"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <Button
                android:id="@+id/continueButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/continue_button"
                android:textSize="20sp" />
        </LinearLayout>
    </FrameLayout>

</FrameLayout>