<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:theme="@style/ThemeOverlay.DiceOfFate.FullscreenContainer"
    tools:context=".FullscreenActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/countdownTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/countdown_header"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/viewDungeonButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_dungeon_button"
                android:textSize="20sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/viewShopButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_shop_button"
                android:textSize="20sp" />

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="0" />

        <Button
            android:id="@+id/restButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rest_button"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fullscreen_content_controls"
        style="@style/Widget.Theme.DiceOfFate.ButtonBar.Fullscreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:orientation="horizontal"
        tools:ignore="UselessParent" >

    </LinearLayout>

</FrameLayout>