<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:theme="@style/ThemeOverlay.DiceOfFate.FullscreenContainer"
    tools:context=".FullscreenActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/shopBackHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shop_front_header"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/shopBuyButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shop_buy"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/shopDetailsButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shop_details"
                    android:textSize="20sp" />

                <Space
                    android:layout_width="30dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/shopItemTextView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ITEM 1"
                    android:textAlignment="viewStart"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/shopBuyButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shop_buy"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/shopDetailsButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shop_details"
                    android:textSize="20sp" />

                <Space
                    android:layout_width="30dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/shopItemTextView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ITEM 2"
                    android:textAlignment="viewStart"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/shopBuyButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shop_buy"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/shopDetailsButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shop_details"
                    android:textSize="20sp" />

                <Space
                    android:layout_width="30dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/shopItemTextView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ITEM 3"
                    android:textAlignment="viewStart"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/shopBuyButton4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shop_buy"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/shopDetailsButton4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shop_details"
                    android:textSize="20sp" />

                <Space
                    android:layout_width="30dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/shopItemTextView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ITEM 4"
                    android:textAlignment="viewStart"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

            </TableRow>
        </TableLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/shopPrevButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prev_button"
                android:textSize="20sp" />

            <Space
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="0" />

            <Button
                android:id="@+id/shopNextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next_button"
                android:textSize="20sp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/dungeonBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_button"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fullscreen_content_controls"
        style="@style/Widget.Theme.DiceOfFate.ButtonBar.Fullscreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:orientation="horizontal"
        tools:ignore="UselessParent" >

    </LinearLayout>

</FrameLayout>