<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:theme="@style/ThemeOverlay.DiceOfFate.FullscreenContainer"
    tools:context=".FullscreenActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dungeonSelectHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dungeon_select_header"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/visitDungeonButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/go_button"
                    android:textSize="20sp" />

                <Space
                    android:layout_width="30dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/dungeonNameTextView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="DUNGEON 1"
                    android:textAlignment="viewStart"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/visitDungeonButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/go_button"
                    android:textSize="20sp" />

                <Space
                    android:layout_width="30dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/dungeonNameTextView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="DUNGEON 2"
                    android:textAlignment="viewStart"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/visitDungeonButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/go_button"
                    android:textSize="20sp" />

                <Space
                    android:layout_width="30dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/dungeonNameTextView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="DUNGEON 3"
                    android:textAlignment="viewStart"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/visitDungeonButton4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/go_button"
                    android:textSize="20sp" />

                <Space
                    android:layout_width="30dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/dungeonNameTextView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="DUNGEON 4"
                    android:textAlignment="viewStart"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

            </TableRow>
        </TableLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/dungeonBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_button"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fullscreen_content_controls"
        style="@style/Widget.Theme.DiceOfFate.ButtonBar.Fullscreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:orientation="horizontal"
        tools:ignore="UselessParent" >

    </LinearLayout>

</FrameLayout>